--- a/toc.html
+++ b/toc.html
@@ -17,16 +17,15 @@
         <!-- Custom HTML head -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="stylesheet" href="css/variables-8adf115d.css">
+        <link rel="stylesheet" href="css/general-2459343d.css">
+        <link rel="stylesheet" href="css/chrome-ae938929.css">
+        <link rel="stylesheet" href="css/print-9e4910d8.css" media="print">
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="fonts/fonts-9644e21d.css">
         <!-- Custom theme stylesheets -->
     </head>
     <body class="sidebar-iframe-inner">
-        <ol class="chapter"><li class="chapter-item expanded "><a href="overview.html" target="_parent"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="pbh/overview.html" target="_parent"><strong aria-hidden="true">2.</strong> Priority Blockspace for Humans</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pbh/architecture.html" target="_parent"><strong aria-hidden="true">2.1.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="pbh/txs.html" target="_parent"><strong aria-hidden="true">2.2.</strong> PBH Transactions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pbh/payload.html" target="_parent"><strong aria-hidden="true">2.2.1.</strong> PBH Payload</a></li><li class="chapter-item expanded "><a href="pbh/validation.html" target="_parent"><strong aria-hidden="true">2.2.2.</strong> Validation</a></li></ol></li></ol></li></ol>
+        <ol class="chapter"><li class="chapter-item expanded "><span class="chapter-link-wrapper"><a href="overview.html" target="_parent"><strong aria-hidden="true">1.</strong> Introduction</a></span></li><li class="chapter-item expanded "><span class="chapter-link-wrapper"><a href="pbh/overview.html" target="_parent"><strong aria-hidden="true">2.</strong> Priority Blockspace for Humans</a></span><ol class="section"><li class="chapter-item expanded "><span class="chapter-link-wrapper"><a href="pbh/architecture.html" target="_parent"><strong aria-hidden="true">2.1.</strong> Architecture</a></span></li><li class="chapter-item expanded "><span class="chapter-link-wrapper"><a href="pbh/txs.html" target="_parent"><strong aria-hidden="true">2.2.</strong> PBH Transactions</a></span><ol class="section"><li class="chapter-item expanded "><span class="chapter-link-wrapper"><a href="pbh/payload.html" target="_parent"><strong aria-hidden="true">2.2.1.</strong> PBH Payload</a></span></li><li class="chapter-item expanded "><span class="chapter-link-wrapper"><a href="pbh/validation.html" target="_parent"><strong aria-hidden="true">2.2.2.</strong> Validation</a></span></li></ol></li></ol></li></ol>
     </body>
 </html>
